# cpp_base_image

./: CMakeLists.txt  Dockerfile
